--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,12 +4,15 @@
         <meta charset="UTF-8">
         <title>{% block title %}Symfony Map Appliction 🏝{% endblock %}</title>
         {% block stylesheets %}
+            <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css' rel='stylesheet' />
+            <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
             {{ encore_entry_link_tags('css/app') }}
         {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="https://kit.fontawesome.com/69d3fe38b5.js" crossorigin="anonymous"></script>
             {{ encore_entry_script_tags('js/app') }}
         {% endblock %}
     </body>
