--- a/templates/map/index.html.twig
+++ b/templates/map/index.html.twig
@@ -7,18 +7,18 @@
         <h3 class='aside-logo'>map<span>app</span></h3>
 
         {% if is_granted('ROLE_USER') %}
-            {% include "security/login.html.twig" %}
+            {% include "security/profile.html.twig" %}
         {% else %}
             {% include "security/login.html.twig" %}
         {% endif %}
 
         <div class="aside-bottom">
-            <a href="#">О сервисе</a>
             {% if is_granted('ROLE_USER') %}
-                <a href="{{ path('logout') }}">Выход</a>
+                <a href="{{ path('map_logout') }}">Выход</a>
             {% else %}
                 <a href="#">Регистрация</a>
             {% endif %}
+            <a href="#">О сервисе</a>
         </div>
     </aside>
 </main>
