--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -1,3 +1,12 @@
 <div class="aside-profile">
-
+    <div class="user">
+        <div class="user-avatar">
+            <i class="fas fa-user-astronaut"></i>
+        </div>
+        <div class="user-name">
+            <h4>{{ user.fullName }}</h4>
+            <p>{{ user.email }}</p>
+        </div>
+        <div class="user-name"></div>
+    </div>
 </div>
