закончил с регистрацией и начал делать метки на карту

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -142,3 +142,19 @@ main {
         }
     }
 }
+
+.marker {
+    background-image: url('/images/pointer.svg');
+    width: 38px;
+    height: 50px;
+    cursor: pointer;
+  }
+
+  .mapboxgl-popup {
+    max-width: 200px;
+  }
+  
+  .mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+  }
