--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,16 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+<aside class="aside">
+    <h3 class='aside-logo'>map<span>app</span></h3>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.fullName) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-
-
-        <button class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    <div class="aside-login">
+        <p>Заполните форму. Все поля являются обязательными</p>
+        {{ form_start(registrationForm, {'attr': {'class': 'aside-login__form'}}) }}
+            <div class="aside-login__form-row">
+                {{ form_row(registrationForm.fullName, {'attr': {'placeholder': 'Имя, фамилия'}}) }}
+            </div>
+            <div class="aside-login__form-row">
+                {{ form_row(registrationForm.email, {'attr': {'placeholder': 'E-mail адрес'}}) }}
+            </div>
+            <div class="aside-login__form-row">
+                {{ form_row(registrationForm.plainPassword, {'attr': {'placeholder': 'Пароль'}}) }}
+            </div>
+            <div class="aside-login__form-row">
+                <button class="btn aside-login__form__button" type="submit">Зарегистрироваться</button>
+            <div>
+        {{ form_end(registrationForm) }}
+    </div>
+</aside>
 {% endblock %}
