доделал контроллер и сущность для маркеров, сделал связи с юзером, начал делать фетч из роута для json данных маркеров для каждого пользователя

--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -7,6 +7,9 @@
             <h4>{{ user.fullName }}</h4>
             <p>{{ user.email }}</p>
         </div>
-        <div class="user-name"></div>
+    </div>
+    <p>Теперь вы можете добавить сколько угодно заметок на карту</p>
+    <div class="marker-add">
+        <a class="btn marker-add__btn" href="{{ path('marker_add') }}">Добавить точку на карте</a>
     </div>
 </div>
