--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,6 +15,29 @@ main {
     height: 100vh;
 }
 
+.btn {
+    background-color: #D81159;
+    width: 90%;
+    border-radius: 20px;
+    border: medium none;
+    font-size: 16.5px;
+    font-family: 'Montserrat';
+    font-weight: 300;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin: 0 0 20px;
+    outline: none;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 12.5px;
+    color: #999999;
+    line-height: 14px;
+    margin-bottom: 30px;
+}
+
 .aside {
     font-family: 'Montserrat';
     font-weight: 300;
@@ -36,6 +59,8 @@ main {
         font-size: 32.5px;
         font-weight: 700;
         margin-bottom: 30px;
+        color: #ffffff;
+        text-decoration: none;
 
         span {
             color: #D81159;
@@ -45,13 +70,6 @@ main {
     &-login {
         display: block;
         text-align: center;
-
-        p {
-            font-size: 12.5px;
-            color: #999999;
-            line-height: 14px;
-            margin-bottom: 30px;
-        }
 
         &__form {
             &-row {
@@ -70,22 +88,6 @@ main {
                     color: #ffffff;
                 }
 
-                button {
-                    &[type='submit'] {
-                        background-color: #D81159;
-                        width: 90%;
-                        border-radius: 20px;
-                        border: medium none;
-                        font-size: 16.5px;
-                        font-family: 'Montserrat';
-                        font-weight: 300;
-                        padding: 10px 20px;
-                        box-sizing: border-box;
-                        margin: 0 0 20px;
-                        outline: none;
-                        color: #ffffff;
-                    }
-                }
             }
         }
     }
@@ -141,6 +143,10 @@ main {
             }
         }
     }
+
+    &-add-button {
+        
+    }
 }
 
 .marker {
@@ -148,13 +154,13 @@ main {
     width: 38px;
     height: 50px;
     cursor: pointer;
-  }
+}
 
-  .mapboxgl-popup {
+.mapboxgl-popup {
     max-width: 200px;
-  }
+}
   
-  .mapboxgl-popup-content {
+.mapboxgl-popup-content {
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
-  }
+    font-family: 'Montserrat', sans-serif;
+}
