--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,5 @@
 @import 'reset';
+@import 'ps';
 
 body {
     font-family: 'Montserrat';
@@ -29,6 +30,7 @@ main {
     outline: none;
     color: #ffffff;
     text-decoration: none;
+    display: block;
 }
 
 p {
@@ -87,7 +89,22 @@ p {
                     outline: none;
                     color: #ffffff;
                 }
-
+                textarea {
+                    background-color: #333333;
+                    width: 90%;
+                    border-radius: 20px;
+                    border: medium none;
+                    font-size: 16.5px;
+                    font-family: 'Montserrat';
+                    font-weight: 300;
+                    padding: 10px 20px;
+                    box-sizing: border-box;
+                    margin: 0 0 20px;
+                    outline: none;
+                    color: #ffffff;
+                    resize: none;
+                    height: 120px;
+                }
             }
         }
     }
@@ -119,6 +136,13 @@ p {
                     font-size: 15px;
                 }
             }
+
+            &-pointers {
+                margin-top: 30px;
+                position: relative;
+                width: 100%;
+                height: 350px;
+            }
         }
     }
 
@@ -145,7 +169,7 @@ p {
     }
 
     &-add-button {
-        
+
     }
 }
 
@@ -154,6 +178,10 @@ p {
     width: 38px;
     height: 50px;
     cursor: pointer;
+
+    &-add {
+        margin-top: 25px;
+    }
 }
 
 .mapboxgl-popup {
