--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -21,11 +21,12 @@
     {% else %}
         <p>
             Теперь вы можете добавить сколько угодно заметок на карту, 
-            просто кликните по ней чтобы взять текущие координаты объекта
+            просто нажмите Добавить точку, а затем кликните по карте, 
+            чтобы взять текущие координаты объекта
         </p>
     {% endfor %}
     </div>
     <div class="marker-add">
-        <a class="btn marker-add__btn" href="{{ path('marker_add') }}">Добавить точку на карте</a>
+        <a class="btn marker-add__btn" href="{{ path('marker_add') }}">Добавить точку</a>
     </div>
 </div>
