--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,12 @@
             <aside class="aside">
                 <a href="/" class='aside-logo'>map<span>app</span></a>
                 
+                {% for message in app.flashes('notice') %}
+                    <div class='aside-flash'>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+
                 {% block body %}{% endblock %}
 
                 <div class="aside-bottom">
