правки по flashBag

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -61,14 +61,8 @@ p {
         background-color: #D81159;
         padding: 4px 20px;
         color: #dfdfdf;
+        margin: 0 0 20px;
 
-        img.emojione {
-            margin: 0px !important;
-            display: inline !important;
-            
-            height: auto;
-            width: 20px;
-        }
     }
 
     &-logo {
