--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                     {% else %}
                         <a href="{{ path('map_register') }}">Регистрация</a>
                     {% endif %}
-                    <a href="#">О сервисе</a>
+                    <a href="{{ path('map_info') }}">О сервисе</a>
                 </div>
             </aside>
         </main>
