--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -63,6 +63,11 @@ p {
         color: #dfdfdf;
         margin: 0 0 20px;
 
+        position: absolute;
+        top: 10px;
+        left: 340px;
+        width: 200px;
+        text-align: center;
     }
 
     &-logo {
@@ -141,6 +146,7 @@ p {
                 h4 {
                     font-weight: 700;
                     font-size: 19px;
+                    width: 190px;
                 }
                 p {
                     font-size: 15px;
